# cross_libpeer

./: README.md
libpeer/: .gitignore  CMakeLists.txt  CMakeLists_mod.txt  README.md  cmake_win_build_debug.cmd  cmake_win_build_release.cmd  tc-i686-mingw32.cmake
libpeer/BuildTools/sshpass/: cmd.txt  sshpass-armhf  sshpass5
libpeer/examples/esp32/: sdkconfig
libpeer/examples/esp32/main/: audio.c
libpeer/examples/sample/: CMakeLists.txt  main.c
